--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -6,21 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "axios": "0.26.1",
-    "bootstrap": "5.1.3",
-    "font-awesome": "^4.7.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "2.2.2",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.3",
-    "sass": "1.49.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2"
   }
 }
