--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "font-awesome": "^4.7.0",
     "react-toastify": "^9.1.3",
     "sass": "1.49.10",
 
@@ -50,10 +49,7 @@
     ]
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "@types/react-router-dom": "^5.3.3"
-=======
+    "@types/react-router-dom": "^5.3.3",
     "@fortawesome/fontawesome-free": "^6.4.2"
->>>>>>> origin/Kinh/CategoryWarehouse
   }
 }
