--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "5.1.3",
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.4",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
