--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.4",
     "jwt-decode": "^4.0.0",
+    "mdb-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
