--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.4",
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
     "font-awesome": "^4.7.0",
