--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -21,9 +21,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "1.49.10",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
