--- a/chuyen-de-1/package.json
+++ b/chuyen-de-1/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
@@ -26,6 +27,7 @@
     "redux": "^4.2.1",
     "sass": "1.49.10",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
